# nvidia-nim-rag-techniques

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/core/: embeddings.py  llm.py  vector_store.py
src/pipeline/: base.py  benchmark.py
src/techniques/: compression.py  corrective_rag.py  hybrid_search.py  query_rewriting.py  reranking.py
tests/: conftest.py  test_benchmark.py  test_compression.py  test_core.py  test_corrective_rag.py  test_hybrid_search.py  test_query_rewriting.py  test_reranking.py
