[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-nim-rag-techniques"
version = "1.0.0"
description = "5 production RAG optimization techniques powered by NVIDIA NIM"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "faiss-cpu>=1.8",
    "rank-bm25>=0.2",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "pydantic>=2.0",
]

[project.optional-dependencies]
pinecone = ["langchain-pinecone>=0.2", "pinecone-client>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=95"

[tool.coverage.run]
omit = ["tests/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = ["E501"]
